feat(server): creating relationships in all models
