# server/src/app/requests/SessionRequest.ts
@@ -1,0 +1,6 @@
+import { body } from 'express-validator';
+
+export const store = [
+  body('email').isEmail(),
+  body('password').notEmpty().isString().isLength({ min: 6, max: 6 })
+];
